fix: gradients, scroll position, spacing, og img

--- a/src/styles/semantic-tokens.css
+++ b/src/styles/semantic-tokens.css
@@ -76,11 +76,10 @@
     );
 
     --radial-b: radial-gradient(
-      155% 100% at 50% 0%,
-      rgba(201, 179, 245, 0.16) 0%,
-      rgba(201, 179, 245, 0.48) 33%,
-      rgba(136, 170, 241, 0.16) 66%,
-      rgba(255, 255, 255, 0) 100%
+      127.67% 82.36% at 50% -15%,
+      hsla(var(--purple-500), var(--radial-a-opacity-2)) 0%,
+      hsla(var(--blue-500), var(--radial-a-opacity-1)) 66%,
+      transparent 100%
     );
 
     --linear-bug-bounty-title: linear-gradient(
